[emacs] Tweak appearance fringes

--- a/emacs.org
+++ b/emacs.org
@@ -8597,6 +8597,7 @@ current theme.
     (setq modus-themes-mixed-fonts t)
     (setq modus-themes-bold-constructs t)
     (setq modus-themes-italic-constructs t)
+    (setq modus-themes-fringes nil)
     (setq modus-themes-subtle-line-numbers t)
     (setq modus-themes-mode-line '(moody accented))
     (setq modus-themes-region '(bg-only))
