[emacs] Sort thread segments

--- a/emacs.org
+++ b/emacs.org
@@ -5389,11 +5389,11 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
     ;; Style thread segments
     (let ((specs '((mu4e-headers-thread-child-prefix         . "├─")
                    (mu4e-headers-thread-last-child-prefix    . "└─")
-                   (mu4e-headers-thread-connection-prefix    . "│ ")
-                   (mu4e-headers-thread-blank-prefix         . "  ")
                    (mu4e-headers-thread-orphan-prefix        . "┌─")
                    (mu4e-headers-thread-single-orphan-prefix . "╶─")
-                   (mu4e-headers-thread-duplicate-prefix     . "= "))))
+                   (mu4e-headers-thread-duplicate-prefix     . "= ")
+                   (mu4e-headers-thread-connection-prefix    . "│ ")
+                   (mu4e-headers-thread-blank-prefix         . "  "))))
       (dolist (spec specs)
         (pcase-let ((`(,symbol . ,segment) spec))
           (set symbol (cons segment segment))))))
