[emacs] Tweak emmet-expand-line keybinding

--- a/emacs.org
+++ b/emacs.org
@@ -7774,7 +7774,7 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
     :straight t
     :bind
     (:map emmet-mode-keymap
-     ("C-<tab>" . emmet-expand-line))     ; Why does <tab> work but TAB not?
+     ("M-<iso-lefttab>" . emmet-expand-line))
     :hook (mhtml-mode css-mode)
     :config
     (setq emmet-self-closing-tag-style " /")
