[emacs] Tweak key notation

--- a/emacs.org
+++ b/emacs.org
@@ -688,7 +688,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
         ("M-d" . "C-<delete>")
         ("M-<backspace>" . "C-<backspace>")
         ("C-k" . "S-<end> <backspace>")
-        ("M-@" . "S-C-<right>")
+        ("M-@" . "C-S-<right>")
         ("M-h" . "C-a")
         ("M-w" . "C-c")
         ("C-w" . "C-x")
@@ -1008,7 +1008,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
               ((koek-wm/classp "epiphany")
                simulation-keys
                ,(let ((keys (append '(("M-o" . "C-n")
-                                      ("M-p" . "S-C-p")
+                                      ("M-p" . "C-S-p")
                                       ("M-k" . "C-w"))
                                     koek-wm/base-simulation-keys)))
                   (mapcar (pcase-lambda (`(,from . ,to))
@@ -1019,7 +1019,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
               ((koek-wm/classp "firefox")
                simulation-keys
                ,(let ((keys (append '(("M-o" . "C-n")
-                                      ("M-p" . "S-C-p")
+                                      ("M-p" . "C-S-p")
                                       ("M-k" . "C-w"))
                                     koek-wm/base-simulation-keys)))
                   (mapcar (pcase-lambda (`(,from . ,to))
