--- a/emacs.org
+++ b/emacs.org
@@ -720,7 +720,7 @@ b3n (Reddit)]]. For the Firefox add-on, see [[file:dotfiles.org::*KeePass Helper
                   ("s-9" . koek-wm/switch-workspace-9)
                   ("s-w" . koek-wm/switch-previous-workspace)
                   ("s-<tab>" . other-window)
-                  ("s-S-<iso-lefttab>" . koek-wm/rehto-window)
+                  ("s-<iso-lefttab>" . koek-wm/rehto-window)
                   ("<f11>" . exwm-layout-toggle-fullscreen)
                   ("s-b" . switch-to-buffer)
                   ("s-<backspace>" . previous-buffer)
