[emacs] Add functions to query the web

--- a/emacs.org
+++ b/emacs.org
@@ -2438,6 +2438,10 @@ minibuffer.
      :map embark-bookmark-map
      ("e" . koek-eww/jump-bookmark))
 
+    (bind-keys
+     :map embark-region-map
+     ("q" . koek-web/query-region))
+
     (setq embark-help-key (kbd "?")))
 #+END_SRC
 
@@ -6062,6 +6066,23 @@ Inherit Clojure snippets.
     :config
     (setq eldoc-echo-area-use-multiline-p nil)
     :delight)
+#+END_SRC
+
+** Web commands
+#+BEGIN_SRC emacs-lisp
+  (defun koek-web/construct-duckduckgo-url (query)
+    (concat "https://duckduckgo.com/?q="
+            (mapconcat #'url-hexify-string (split-string query) "+")))
+
+  (defun koek-web/query (query)
+    (interactive "sQuery: ")
+    (browse-url (koek-web/construct-duckduckgo-url query)))
+
+  (defun koek-web/query-region (begin end)
+    (interactive "r")
+    (let ((query (buffer-substring-no-properties begin end)))
+      (deactivate-mark)
+      (koek-web/query query)))
 #+END_SRC
 
 * Applications
