[emacs] Prefer length> to combination of > and length

--- a/emacs.org
+++ b/emacs.org
@@ -2772,7 +2772,7 @@ Move deleted files to trash.
              (secondary (file-expand-wildcards (thread-last root
                                                  (expand-file-name "*/")
                                                  (expand-file-name name)))))
-        (if (and (null primary) (> (length secondary) 1) prompt)
+        (if (and (null primary) (length> secondary 1) prompt)
             (let* ((candidates (mapcar (lambda (file-name)
                                          (cons (file-relative-name file-name root)
                                                file-name))
@@ -7046,7 +7046,7 @@ Stavrou)]].
       (interactive "P")
       (let* ((file-names (dired-get-marked-files))
              (mark-active
-              (or (> (length file-names) 1)
+              (or (length> file-names 1)
                   (eq (car (dired-get-marked-files nil nil nil 'distinguish))
                       t))))
         (koek-bngo/enqueue file-names arg)
@@ -8860,7 +8860,7 @@ can load moody.
     '(:eval
       (when (and (featurep 'exwm-workspace) (moody-window-active-p))
         (let ((workspaces (koek-ml/get-exwm-workspaces)))
-          (when (> (length workspaces) 1)
+          (when (length> workspaces 1)
             `(,(moody-ribbon
                 (mapconcat
                  (lambda (workspace)
