[emacs] Bind ediff-buffers

--- a/emacs.org
+++ b/emacs.org
@@ -2982,7 +2982,8 @@ VC is a placeholder.
   (use-package ediff
     :bind
     (("C-c f e" . ediff-files)
-     ("C-c f C-e" . ediff-current-file)))
+     ("C-c f C-e" . ediff-current-file)
+     ("C-c f M-e" . ediff-buffers)))
 
   (use-package ediff-init
     :defer t
