--- a/emacs.org
+++ b/emacs.org
@@ -6518,7 +6518,8 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
 
     (defun koek-bbdb/import-dir (file-name &optional interactive)
       "Import vCards from directory FILE-NAME and its subdirectories.
-  INTERACTIVE is used internally."
+  Treats every vCard as a distinct contact.  INTERACTIVE is used
+  internally."
       (interactive
        (progn
          (require 'bbdb-vcard)
@@ -6529,7 +6530,11 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
                  (expand-file-name
                   (read-directory-name "vCard directory: " root nil t) root)))
            (list file-name 'interactive))))
-      (let* ((file-names
+      ;; `bbdb-allow-duplicates' and `bbdb-vcard-try-merge' are dynamic
+      ;; variables
+      (let* ((bbdb-allow-duplicates t)  ; Distinct contacts can have the same name
+             (bbdb-vcard-try-merge nil) ; Distinct contacts can have the same landline telephone number
+             (file-names
               (directory-files-recursively file-name (rx ".vcf" line-end) nil t))
              (vcards (with-temp-buffer
                        (dolist (file-name file-names)
@@ -6542,10 +6547,7 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
              (n-records (length records)))
         (when interactive
           (message "%d %s imported"
-                   n-records (if (= n-records 1) "vCard" "vCards")))))
-    :config
-    ;; Contacts sharing a landline telephone aren't duplicates
-    (setq bbdb-vcard-try-merge nil))
+                   n-records (if (= n-records 1) "vCard" "vCards"))))))
 #+END_SRC
 
 ** elfeed - News reader
