[emacs] Use default separators

--- a/emacs.org
+++ b/emacs.org
@@ -8336,7 +8336,7 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
               (buffer-substring
                (re-search-forward (rx (one-or-more (not "\""))))
                (re-search-forward (rx (one-or-more (not  ")"))))))
-            (rx (any " \n")) 'omit-nulls "\"")))
+            nil 'omit-nulls "\"")))
       (dolist (keyword keywords)
         (define-abbrev sql-mode-abbrev-table keyword (upcase keyword)
                        nil :enable-function #'koek-bbrv/in-code-p :system t)))
