[emacs] Visit cxx files in c++-mode

--- a/emacs.org
+++ b/emacs.org
@@ -7292,7 +7292,7 @@ configuration here so [[*CMake][cmake-mode]] and [[*Conf][conf-mode]] can shadow
   (use-package cc-mode
     :mode
     (((rx ".c" string-end) . c-mode)
-     ((rx ".cpp" string-end) . c++-mode)
+     ((rx (or ".cpp" ".cxx") string-end) . c++-mode)
      ((rx ".java" string-end) . java-mode))
     :config
     (bind-keys
