[emacs] Fontify quote and verse blocks

--- a/emacs.org
+++ b/emacs.org
@@ -8081,6 +8081,11 @@ templates]].
     (setq org-clock-persist 'clock)
     (org-clock-load))
 
+  (use-package org-faces
+    :defer t
+    :config
+    (setq org-fontify-quote-and-verse-blocks t))
+
   (use-package org-list
     :bind
     ("C-c o t" . org-cycle-list-bullet))  ; List [t]ype
